fix: adapt new title spacings to title component

--- a/src/components/sbb-title/sbb-title.scss
+++ b/src/components/sbb-title/sbb-title.scss
@@ -19,17 +19,28 @@
 // stylelint-disable plugin/stylelint-bem-namics
 :host(:where(:not([visually-hidden]))) {
   --sbb-title-margin-block-start: var(--sbb-spacing-responsive-m);
-  --sbb-title-margin-block-end: var(--sbb-spacing-responsive-xs);
+  --sbb-title-margin-block-end: var(--sbb-spacing-responsive-s);
+}
+
+// Due to using :where, order does matter
+:host(:where([level='2']:not([visual-level]), [visual-level='2']):where(:not([visually-hidden]))),
+:host(:where([level='3']:not([visual-level]), [visual-level='3']):where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-end: var(--sbb-spacing-responsive-xxxs);
+}
+
+// Due to using :where, order does matter
+:host(:where([level='4']:not([visual-level]), [visual-level='4']):where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-3x);
 }
 
 // Due to using :where, order does matter
 :host(:where([level='5']:not([visual-level]), [visual-level='5']):where(:not([visually-hidden]))) {
-  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-5x);
+  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-2x);
 }
 
 // Due to using :where, order does matter
 :host(:where([level='6']:not([visual-level]), [visual-level='6']):where(:not([visually-hidden]))) {
-  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-4x);
+  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-1x);
 }
 
 :host([negative]) {
